--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body, html {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .wrapper {
@@ -49,4 +50,26 @@ h2 {
     height: 60%;
     margin: auto;
     border-radius: 10px;
+}
+
+/* Modal box */
+
+.modal {
+    position: fixed;
+    left:0;
+    top: 0;
+    z-index: 1;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(0,0,0,0.4);
+    display: none;
+}
+
+.modalText {
+    background-color: white;
+    padding: 15px;
+    width: 55vw;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 25vh;
 }
