--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,16 @@ h2 {
     height: 60%;
     margin: auto;
     border-radius: 10px;
+    padding: 1px;
+}
+
+/* List element styles */
+
+.listElement {
+    font-family: 'Merriweather', serif; 
+    list-style-type: circle; 
+    width: 100%;
+    text-align: left
 }
 
 /* Modal box */
@@ -72,4 +82,22 @@ h2 {
     border-radius: 10px;
     margin: auto;
     margin-top: 25vh;
+}
+
+/* Remove Button on List Element */
+
+.removeBtn {
+    width: 6vw;
+    height: 4vh;
+    border-radius: 50%;
+    background-color: #eeeeee;
+    color: #2e8198;
+    font-weight: bold;
+    float: right;
+    margin-right: 1vw;
+}
+
+.removeBtn:focus {
+    outline: none;
+    border: 2px solid orange;
 }
