--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,8 @@ h2 {
     font-family: 'Merriweather', serif; 
     list-style-type: circle; 
     width: 100%;
-    text-align: left
+    text-align: left;
+    display: block;
 }
 
 /* Modal box */
@@ -90,8 +91,8 @@ h2 {
     width: 6vw;
     height: 4vh;
     border-radius: 50%;
-    background-color: #eeeeee;
-    color: #2e8198;
+    background-color: #e29896;
+    color: #607687;
     font-weight: bold;
     float: right;
     margin-right: 1vw;
@@ -100,4 +101,27 @@ h2 {
 .removeBtn:focus {
     outline: none;
     border: 2px solid orange;
+}
+
+/* Mark task ad complete Buton */
+
+.completeBtn {
+    width: 6vw;
+    height: 4vh;
+    border-radius: 50%;
+    background-color: #eee;
+    color: #607687;
+    font-weight: bold;
+    float: right;
+    margin-right: 1vw;
+}
+
+.completeBtn:focus {
+    outline: none;
+    border: 2px solid orange;
+}
+
+.taskDone {
+    text-decoration: line-through;
+    color: darkgrey;
 }
