--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ h2 {
 
 /* Button to add Tasks and input to write them */
 
-#addBtn, #inputTask {
+#addBtn, #inputTask, #deleteTasksBtn {
     display: block;
     margin: 2vh auto;
     font-family: 'Merriweather', serif;
@@ -31,12 +31,12 @@ h2 {
     padding: 7px;
 }
 
-#addBtn {
+#addBtn, #deleteTasksBtn {
     font-weight: bold;
     color: #607687;
 }
 
-#addBtn:focus, #inputTask:focus {
+#addBtn:focus, #inputTask:focus, #deleteTasksBtn:focus {
     outline: none;
     border: 2px solid orange;
     border-radius: 10px;
@@ -60,7 +60,6 @@ h2 {
     list-style-type: circle; 
     width: 100%;
     text-align: left;
-    display: block;
 }
 
 /* Modal box */
@@ -94,7 +93,7 @@ h2 {
     background-color: #e29896;
     color: #607687;
     font-weight: bold;
-    float: right;
+/*    float: right;*/
     margin-right: 1vw;
 }
 
@@ -112,7 +111,7 @@ h2 {
     background-color: #eee;
     color: #607687;
     font-weight: bold;
-    float: right;
+/*    float: right;*/
     margin-right: 1vw;
 }
 
