--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body, html {
     margin: auto;
     border-radius: 8%;
     box-sizing: border-box;
+    position: relative;
 }
 
 h2 {
@@ -47,7 +48,7 @@ h2 {
 .listBox {
     background-color: white;
     width: 75%;
-    height: 60%;
+    min-height: 50%;
     margin: auto;
     border-radius: 10px;
     padding: 1px;
@@ -60,6 +61,7 @@ h2 {
     list-style-type: circle; 
     width: 100%;
     text-align: left;
+    clear: right;
 }
 
 /* Modal box */
@@ -93,8 +95,7 @@ h2 {
     background-color: #e29896;
     color: #607687;
     font-weight: bold;
-/*    float: right;*/
-    margin-right: 1vw;
+    float: right;
 }
 
 .removeBtn:focus {
@@ -111,8 +112,7 @@ h2 {
     background-color: #eee;
     color: #607687;
     font-weight: bold;
-/*    float: right;*/
-    margin-right: 1vw;
+    float: right;
 }
 
 .completeBtn:focus {
