--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,14 @@ body, html {
     text-align: center;
     font-family: 'Merriweather', serif;
     background-color: #eeeeee;
-    width: 80vw;
-    height: 80vh;
+    max-width: 90vw;
+    min-height: 80vh;
+/*    max-height: 100vh;*/
     margin: auto;
     border-radius: 8%;
     box-sizing: border-box;
-    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 h2 {
@@ -23,7 +25,7 @@ h2 {
 
 /* Button to add Tasks and input to write them */
 
-#addBtn, #inputTask, #deleteTasksBtn {
+#addBtn, #inputTask, #deleteTasksBtn, #saveListBtn {
     display: block;
     margin: 2vh auto;
     font-family: 'Merriweather', serif;
@@ -32,12 +34,12 @@ h2 {
     padding: 7px;
 }
 
-#addBtn, #deleteTasksBtn {
+#addBtn, #deleteTasksBtn, #saveListBtn {
     font-weight: bold;
     color: #607687;
 }
 
-#addBtn:focus, #inputTask:focus, #deleteTasksBtn:focus {
+#addBtn:focus, #inputTask:focus, #deleteTasksBtn:focus, #saveListBtn:focus {
     outline: none;
     border: 2px solid orange;
     border-radius: 10px;
@@ -48,10 +50,17 @@ h2 {
 .listBox {
     background-color: white;
     width: 75%;
-    min-height: 50%;
+    min-height: 45vh;
     margin: auto;
     border-radius: 10px;
     padding: 1px;
+    box-sizing: border-box;
+}
+
+.listTasks {
+    widows: 100%;
+    margin: 1vh auto;
+    padding-left: 5vw;
 }
 
 /* List element styles */
@@ -89,13 +98,14 @@ h2 {
 /* Remove Button on List Element */
 
 .removeBtn {
-    width: 6vw;
-    height: 4vh;
+    width: 28px;
+    height: 28px;
     border-radius: 50%;
     background-color: #e29896;
     color: #607687;
     font-weight: bold;
     float: right;
+    margin-right: 1vw;
 }
 
 .removeBtn:focus {
@@ -106,8 +116,8 @@ h2 {
 /* Mark task ad complete Buton */
 
 .completeBtn {
-    width: 6vw;
-    height: 4vh;
+    width: 28px;
+    height: 28px;
     border-radius: 50%;
     background-color: #eee;
     color: #607687;
